--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "handlebars": "^4.7.8",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "mongoose-paginate-v2": "^1.8.0",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
